java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint6.pass
package org.netbeans.test.java.hints;

import java.util.Collections;

public class ImportTest6 {
    
    /** Creates a new instance of ImportTest */
    public ImportTest6() {
        Collections.
    }
    
}
